--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" media="screen and (max-width: 767.98px)" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header id="header">
